--- a/src/containers/Tickets/components/ticketList/ticketList.css
+++ b/src/containers/Tickets/components/ticketList/ticketList.css
@@ -14,12 +14,11 @@
 	font-weight: 600;
 	font-size: 12px;
 	line-height: 20px;
-    cursor: pointer;
-    transition: all .2s;
+	cursor: pointer;
+	transition: all 0.2s;
 }
 
-
 .btn_more:hover {
-    background-color: #fff;
+	background-color: #fff;
 	color: #2196f3;
 }
